Fixed navbar top on small screen, added betclic, added build pass

--- a/my-new-cv/src/app/components/footer/footer.component.scss
+++ b/my-new-cv/src/app/components/footer/footer.component.scss
@@ -32,6 +32,10 @@
       img {
         height: 100px;
       }
+
+      .build-jenkins{
+        height: auto;
+      }
     }
   }
 
